--- a/GestorPersonas.UI/Views/Persona/Agregar.cshtml
+++ b/GestorPersonas.UI/Views/Persona/Agregar.cshtml
@@ -9,7 +9,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Agregar" enctype="multipart/form-data">
+        <form asp-action="Agregar" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Identificacion" class="control-label"></label>
@@ -33,9 +33,9 @@
             </div>
 
             <div class="form-group">
-                <label asp-for="Imagen" class="control-label"></label>
-                <input asp-for="Imagen" accept="image/*"/>
-                <span asp-validation-for="Imagen" class="text-danger"></span>
+                <label asp-for="Foto" class="control-label"></label>
+                <input type="file" id="files" asp-for="Foto"/>
+                <span asp-validation-for="Foto" class="text-danger"></span>
             </div>
 
             <div class="form-group">
